# cmd/api/routes.go
@@ -1,28 +1,0 @@
-package main
-
-import (
-	"net/http"
-	"provolo-api/cmd/api/handlers"
-
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
-)
-
-func (app *application) routes() http.Handler {
-	g := gin.Default()
-
-	v1 := g.Group("/api/v1")
-	{
-		v1.POST("/payment-webhook", handlers.PaymentWebhook)
-	}
-
-	g.GET("/swagger/*any", func(c *gin.Context) {
-		if c.Request.RequestURI == "/swagger/" {
-			c.Redirect(302, "/swagger/index.html")
-		}
-		ginSwagger.WrapHandler(swaggerFiles.Handler, ginSwagger.URL(app.swaggerURL))(c)
-	})
-
-	return g
-}
